syntax = "proto3";

package todo.v1;

option go_package = "github.com/iwaltgen/grpc-go-web-tody/api/todo/v1;todov1";

enum Event {
  EVENT_UNSPECIFIED = 0;
  EVENT_CREATE = 1;
  EVENT_UPDATE = 2;
  EVENT_DELETE = 3;
}
