syntax = "proto3";

package todo.v1;

option go_package = "todov1";

import "google/protobuf/timestamp.proto";

message Todo {
  string id = 1;
  string description = 2;
  bool completed = 3;
  google.protobuf.Timestamp modified_at = 4;
  google.protobuf.Timestamp created_at = 5;
}
